--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -13,5 +13,6 @@
         <app-yes-no-message *ngIf="windowPage =='yes-no-message'" (closeEvent)="close()"></app-yes-no-message>
         <app-medical-act-submitter *ngIf="windowPage =='medical-act-submitter'" (closeEvent)="close()"></app-medical-act-submitter>
         <app-new-visit *ngIf="windowPage == 'new-visit'" (closeEvent)="close()"></app-new-visit>
+        <app-paye-visit *ngIf="windowPage == 'paye-visit'" (closeEvent)="close()"></app-paye-visit>
     </div>
 </div>
