--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/visit/visit.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/visit/visit.component.html
@@ -70,16 +70,18 @@
                 <i class="fa fa-clock"></i> debut <span class="hightlight"> {{visit.startTime}}</span> - fin <span class="hightlight">   {{visit.endTime}}</span>
             </p>
             <p>
-                <i class="fa fa-money-bill-wave"></i>Montant a payé <span>{{totalMoney}} DA</span>
+                <i class="fa fa-money-bill-wave"></i>Montant total <span>{{totalMoney}} DA</span>
             </p>
-            <p>
+
+            <p *ngIf="visit.status =='visit payed' ">
+                Payé : <span>{{visit.payedMoney}} DA</span> Credit : <span>{{visit.debt}} DA</span>
+            </p>
+            <p *ngIf="visit.status == 'visit done'">
                 <i class="round"></i>
                 <span>{{visit.status}}</span>
             </p>
-
         </div>
     </div>
-
     <div class="bottom-side stretch-container">
         <p>
             <i class="fa fa-envelope"></i> {{(visit.medicalFile.email)? (visit.medicalFile.email) : ("Inconnue")}}
@@ -88,6 +90,13 @@
             <i class="fa fa-phone"></i> {{(visit.medicalFile.phone)? (visit.medicalFile.phone) : ("Inconnue")}}
         </p>
     </div>
+
+    <div class="controller">
+        <span class="paye-visit" (click)="payeVisit()">
+            <i class="fa fa-money-bill"></i>
+        </span>
+    </div>
+
 </div>
 <div id="extra-margin" *ngIf="next"></div>
 
