Visit payment edit done

--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/visit/paye-visit/paye-visit.component.css
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/visit/paye-visit/paye-visit.component.css
@@ -70,3 +70,11 @@ p i {
 .controller {
     margin-top: 26px;
 }
+
+.old-payment {
+    margin: 16px 0px;
+}
+
+.old-payment .col:last-child p {
+    text-align: right;
+}
