--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/visit/visit.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/visit/visit.component.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="controller" *ngIf="!ignore && !next && !currentVisit">
-            <span class="edit">
+            <span class="edit" (click)="editVisit ( )">
                 <i class="fa fa-edit"></i>
             </span>
             <span class="visit" (click)="toVisit()">
