--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/patients-list.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/patients-list.component.html
@@ -5,7 +5,7 @@
     <div class="list" *ngIf="!done" cdkDropList (cdkDropListDropped)="drop($event)">
 
         <div class="visit" *ngFor="let visit of visits; let i = index" cdkDrag cdkDragLockAxis="y">
-            <app-visit (outVisitEvent)="outVisitEvent.emit($event)" (restoreVisitEvent)="restoreVisitEvent.emit($event)" (ignoreVisitEvent)="ignoreVisitEvent.emit($event)" (inVisitEvent)="inVisit($event)" [currentVisit]="currentVisit && currentVisit.id == visit.id"
+            <app-visit [waitingRoom]="waitingRoom" (outVisitEvent)="outVisitEvent.emit($event)" (restoreVisitEvent)="restoreVisitEvent.emit($event)" (ignoreVisitEvent)="ignoreVisitEvent.emit($event)" (inVisitEvent)="inVisit($event)" [currentVisit]="currentVisit && currentVisit.id == visit.id"
                 [visit]="visit" [nextSubject]="visitsSubjects[i].subject" [done]="done"></app-visit>
         </div>
     </div>
