--- a/src/app/components/dashboard/content/waiting-room/new-visit/new-visit.component.html
+++ b/src/app/components/dashboard/content/waiting-room/new-visit/new-visit.component.html
@@ -1,7 +1,7 @@
 <div class="main-container stretch-container">
     <div class="visit-container primary-radius">
         <div class="row">
-            <div class="col col-md-12">
+            <div class="col col-md-12" *ngIf="!edit">
                 <app-search-input (itemSelected)="selectMedicalFile($event)" [type]="'medicalFile'" [submittedItem]="submittedMedicalFile" [searchFunction]="searchFunction" [placeholder]="'Recherché un dossie medical'"></app-search-input>
             </div>
             <div class="col col-md-12">
@@ -13,17 +13,15 @@
                         Creé le <i class="fa fa-plus"></i>
                     </button>
                 </div>
-
                 <div class="medical-file" *ngIf="visit.medicalFile">
                     <app-mini-medical-file [medicalFile]="visit.medicalFile"></app-mini-medical-file>
                 </div>
-
             </div>
             <div class="col col-md-12">
                 <h5>Salle d'attent</h5>
                 <p class="waiting-room-info">
                     <span><i class="fa fa-calendar"></i>{{visit.waitingRoom.date}}</span>
-                    <span><i class="fa fa-sort-amount-up"></i>{{visit.waitingRoom.visits.length + 1}} {{(visit.waitingRoom.visits.length == 0) ? ("er") : ("éme")}}</span>
+                    <span><i class="fa fa-sort-amount-up"></i>{{visit.order }} {{(visit.waitingRoom.visits.length == 0) ? ("er") : ("éme")}}</span>
 
                 </p>
             </div>
@@ -71,7 +69,9 @@
             </div>
             <div class="col col-md-12">
                 <div class="controller">
-                    <button class="primary-button" [disabled]="visit.medicalFile == null" (click)="saveVisit()">Ajouter <i class="fa fa-plus"></i></button>
+                    <button *ngIf="!edit" class="primary-button" [disabled]="visit.medicalFile == null" (click)="saveVisit()">Ajouter<i class="fa fa-plus"></i></button>
+                    <button *ngIf="edit" class="primary-button" [disabled]="visit.medicalFile == null" (click)="editVisit()">Modifier<i class="fa fa-edit"></i></button>
+
                     <div style="clear: both;"></div>
                 </div>
             </div>
