--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/visit/visit.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/visit/visit.component.html
@@ -55,6 +55,9 @@
             <span class="start-visit">
                 <i class="fa fa-heartbeat"></i>
             </span>
+            <span class="visit-done" (click)="visitDone ()">
+                <i class="fa fa-check"></i>
+            </span>
         </div>
     </div>
 
