--- a/src/app/components/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/dashboard/side-bar/side-bar.component.html
@@ -24,8 +24,8 @@
                     <i class="fa fa-chart-pie"></i>
                 </a>
             </li>
-            <li>
-                <a>
+            <li [class.active]="activatedRouter == 5">
+                <a routerLink="/dashboard/visit">
                     <i class="fa fa-heartbeat"></i>
                 </a>
             </li>
