--- a/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
+++ b/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
@@ -1,3 +1,6 @@
 <div class="main-container">
     <app-header></app-header>
+    <div class="content">
+        <app-visit-header></app-visit-header>
+    </div>
 </div>
